<resources>

    <string name="app_name">PracticaBasesDeDatos</string>
    <string name="texto1">¿Que quieres hacer?</string>
    <string name="insertar">Insertar</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="listar">Listar</string>
    <string name="ventanaInsert">Insertar</string>
    <string name="ventanaActualizar">Actualizar</string>
    <string name="ventanaBorrar">Borrar</string>
    <string name="ventanaListar">Listar</string>
    <string name="TextoInsetar">¿Donde quieres Insertar?</string>

    <string name="opcionUsuario">Tabla_Usuario</string>
    <string name="opcionCodeIsoPais">Tabla_CodeIsoPais</string>
    <string name="opcionPais">Tabla_Pais</string>
    <string name="opcionCiudad">Tabla_Ciudad</string>

    <!---Pregunta de que va ha realizar el usuario-->
    <string name="textoInsertar">¿En que tabla quieres Insertar?</string>
    <string name="textoActualizar">¿En que tabla quieres actualizar?</string>
    <string name="textoBorrar">¿En que tabla quieres borrar?</string>
    <string name="textoListar">¿Que tabla quieres obtener su información?</string>

    <!--Texto Tabla Usuario-->
    <string name="textoTablaUsuarioInsertar">Datos a insetar en la Tabla Usuario</string>
    <string name="textoTablaUsuarioActualizar">Datos actualizables en la Tabla Usuario</string>
    <string name="textoTablaUsuarioBorrar">¿Que usuario quieres borrar?</string>
    <string name="textoTablaUsuarioListar">Listando la Tabla Usuarios</string>

    <string name="textoActuUsuario">¿Que usuario quieres actualizar?</string>
    <string name="textoInserUsuario">¿Que usuario quieres insertar?</string>
    <string name="textoBorrarUsuario">¿Que usuario quieres borrar?</string>
    <string name="idUsuarioBuscar">Inserte el Id del usuario a buscar</string>
    
    <string name="idUsuario">Inserte el Id del Usuario (numero)</string>
    <string name="idUsuarioActu">Inserte el Id del Usuario que quieres Actualizar (Numero)</string>
    <string name="nombreUsuario">Inserte el nombre del Usuario (string)</string>
    <string name="apellidoUsuario">Inserte el apellido del Usuario (string)</string>
    <string name="nombreAPPUsuario">Inserte el nombre en la aplicación del Usuario (string)</string>
    <string name="emailUsuario">Inserte el email del Usuario (string)</string>
    <string name="codigoIsoUsuario">Inserte el codeIso del pais del Usuario (string)</string>
    
    <!--Texto Tabla Pais-->
    <string name="textoTablaPaisInsertar">Datos a insetar en la Tabla Pais</string>
    <string name="textoTablaPaisActualizar">Datos actualizables en la Tabla Pais</string>
    <string name="textoTablaPaisBorrar">¿Que pais quieres borrar?</string>
    <string name="textoTablaPaisListar">Listando la Tabla Paises</string>

    <string name="textoActuPais">¿Que pais quieres actualizar?</string>
    <string name="textoInserPais">¿Que pais quieres insertar?</string>
    <string name="textoBorrarPais">¿Que pais quieres borrar?</string>

    <string name="idPais">Inserte el Id del Pais (numero)</string>
    <string name="nombrePais">Inserte el nombre del Pais (string)</string>

    <!--Texto Tabla Ciudad-->
    <string name="textoTablaCiudadInsertar">Datos a insetar en la Tabla Ciudad</string>
    <string name="textoTablaCiudadActualizar">Datos actualizables en la Tabla Ciudad</string>
    <string name="textoTablaCiudadBorrar">¿Que ciudad quieres borrar?</string>
    <string name="textoTablaCiudadListrar">Listando la Tabla Ciudades</string>

    <string name="textoActuCiudad">¿Que ciudad quieres actualizar en la tabla Ciudad?</string>
    <string name="textoInsertCiudad">¿Que ciudad quieres insertar en la tabla Ciudad?</string>
    <string name="textoBorrarCiudad">¿Que ciudad quieres borrar en la tabla Ciudad?</string>

    <string name="idCiudad">Inserte el id de la Ciudad (numero)</string>
    <string name="nombreCiudad">Inserte el nombre de la Ciudad (nombre)</string>

    <!--Texto Tabla CodeIsoPais-->
    <string name="textoTablaCodeIsoInsertar">Datos a insetar en la Tabla CodeIsoPais</string>
    <string name="textoTablaCodeIsoActualizar">Datos actualizables en la Tabla CodeIsoPais</string>
    <string name="textoTablaCodeIsoBorrar">¿Que CodeIsoPais quieres borrar?</string>
    <string name="textoTablaCodeIsoListar">Listando la Tabla CodeIsoPais</string>

    <string name="textoActuCodeIsoPais">¿Que valor quieres cambiar en la tabla CodeIsoPais?</string>
    <string name="textoInsertCodeIsoPais">¿Que valor quieres insertar en la tabla CodeIsoPais?</string>
    <string name="textoBorrarCodeIsoPais">¿Que valor quieres borrar en la tabla CodeIsoPais?</string>

    <string name="codeIsoNombre">Inserte el Nombre del CodigoIso del Pais (String)</string>
    <string name="idCodeIsoPais">Inserte el Id del Codigo Iso del Pais (numeric)</string>

    <string name="botonVolver">Regresar</string>

</resources>