<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesusuarios.MainActivityUsuarioInsertarActualizar">

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <EditText
        android:layout_below="@id/texto"
        android:id="@+id/usuarioId"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idUsuario"/>

    <EditText
        android:id="@+id/usuarioNombre"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuarioId"
        android:hint="@string/nombreUsuario"/>

    <EditText
        android:id="@+id/usuarioApellido"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuarioNombre"
        android:hint="@string/apellidoUsuario"/>

    <EditText
        android:id="@+id/usuario"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuarioApellido"
        android:hint="@string/nombreAPPUsuario"/>

    <EditText
        android:id="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuario"
        android:hint="@string/emailUsuario"/>

    <EditText
        android:id="@+id/codigoIsoUsuario"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/codigoIsoUsuario"/>

    <TableLayout
        android:id="@+id/layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/Regresar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPulsameRegresar"
                android:text="@string/botonVolver"
                android:textSize="30dp" />

            <Button
                android:id="@+id/accion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>