<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto1"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>

    <LinearLayout
        android:layout_below="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonInsertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:text="@string/insertar"
            android:textSize="30dp"
            android:onClick="onPulsameInsertar"/>

        <Button
            android:id="@+id/botonActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:text="@string/actualizar"
            android:textSize="30dp"
            android:onClick="onPulsameActualizar"/>

        <Button
            android:id="@+id/botonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="@string/borrar"
            android:textSize="30dp"
            android:onClick="onPulsameBorrar"/>

        <Button
            android:id="@+id/botonListar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:text="@string/listar"
            android:textSize="30dp"
            android:onClick="onPulsameListar"/>

    </LinearLayout>

</RelativeLayout>