<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesciudad.MainActivityCiudadInsertarActualizar">

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <EditText
        android:layout_below="@id/texto"
        android:id="@+id/idCiudad"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idCiudad"/>

    <EditText
        android:id="@+id/nombrePais"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCiudad"
        android:hint="@string/nombreCiudad"/>

    <EditText
        android:id="@+id/idPais"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombrePais"
        android:hint="@string/idPais"/>

    <TextView
        android:id="@+id/texto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/idPais"
        android:layout_above="@id/layout"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TableLayout
        android:id="@+id/layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/Regresar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPulsameRegresar"
                android:text="@string/botonVolver"
                android:textSize="30dp" />

            <Button
                android:id="@+id/accion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>