<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiesusuarios.MainActivityUsuarioListar">

    <TextView
        android:id="@+id/textoListar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoTablaUsuarioListar"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/usuarioBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoListar"
        android:layout_marginTop="20dp"
        android:hint="@string/idUsuarioBuscar"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/listaUsuario"
        android:layout_below="@id/usuarioBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout"
        android:layout_marginTop="20dp"/>

    <TableLayout
        android:id="@+id/layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/Regresar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPulsameRegresar"
                android:text="@string/botonVolver"
                android:textSize="30dp" />

            <Button
                android:id="@+id/accion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30dp"
                android:text="Mostrar"
                android:onClick="mostarUsuario"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>
